module(
    name = "bazel_cache_rbe_examples",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_java", version = "8.6.2")
bazel_dep(name = "rules_cc", version = "0.1.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
